updated color scheme via css and initial update to README

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="container">
       <div class="time-block">
         <div class="row">
-          <div class="hour">9:00</div>
+          <div class="hour">  9:00am</div>
           <textarea type="text" class="description col-10" name="9"></textarea>
           <button type="button" class="saveBtn">Save</button>
         </div>
@@ -40,7 +40,7 @@
 
       <div class="time-block">
         <div class="row">
-          <div class="hour">10:00</div>
+          <div class="hour">10:00am</div>
           <textarea type="text" class="description col-10" name="10"></textarea>
           <button type="button" class="saveBtn">Save</button>
         </div>
@@ -48,7 +48,7 @@
 
       <div class="time-block">
         <div class="row">
-          <div class="hour">11:00</div>
+          <div class="hour">11:00am</div>
           <textarea type="text" class="description col-10" name="11"></textarea>
           <button type="button" class="saveBtn">Save</button>
         </div>
@@ -56,7 +56,7 @@
 
       <div class="time-block">
         <div class="row">
-          <div class="hour">12:00</div>
+          <div class="hour">12:00pm</div>
           <textarea type="text" class="description col-10" name="12"></textarea>
           <button type="button" class="saveBtn">Save</button>
         </div>
@@ -64,7 +64,7 @@
 
       <div class="time-block">
         <div class="row">
-          <div class="hour">13:00</div>
+          <div class="hour">  1:00pm</div>
           <textarea type="text" class="description col-10" name="13"></textarea>
           <button type="button" class="saveBtn">Save</button>
         </div>
@@ -72,7 +72,7 @@
 
       <div class="time-block">
         <div class="row">
-          <div class="hour">14:00</div>
+          <div class="hour">  2:00pm</div>
           <textarea type="text" class="description col-10" name="14"></textarea>
           <button type="button" class="saveBtn">Save</button>
         </div>
@@ -80,7 +80,7 @@
 
       <div class="time-block">
         <div class="row">
-          <div class="hour">15:00</div>
+          <div class="hour">  3:00pm</div>
           <textarea type="text" class="description col-10" name="15"></textarea>
           <button type="button" class="saveBtn">Save</button>
         </div>
@@ -88,7 +88,7 @@
 
       <div class="time-block">
         <div class="row">
-          <div class="hour">16:00</div>
+          <div class="hour">  4:00pm</div>
           <textarea type="text" class="description col-10" name="16"></textarea>
           <button type="button" class="saveBtn">Save</button>
         </div>
@@ -96,7 +96,7 @@
 
       <div class="time-block">
         <div class="row">
-          <div class="hour">17:00</div>
+          <div class="hour">  5:00pm</div>
           <textarea type="text" class="description col-10" name="17"></textarea>
           <button type="button" class="saveBtn">Save</button>
         </div>
@@ -107,5 +107,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="script.js"></script>
   </body>
+
+  <footer>
+    Made by Lindsay and Javascript 
+  </footer>
+  
   </html>
 
