add mockup images to read me document

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body>
     <header class="jumbotron">
       <h1 class="display-3">Work Day Scheduler</h1>
-      <p class="lead">A simple calendar app for scheduling your work day. Click the icon to pin your event to the board!</p><br>
+      <p class="lead">A simple calendar app for scheduling your work day. Click the icon to pin your event permanently!</p><br>
       <p id="currentDay" class="lead"></p>
       
     </header>
@@ -35,7 +35,7 @@
         <div class="row">
           <div class="hour">  9:00am</div>
           <textarea type="text" class="description col-10" name="9"></textarea>
-          <button type="button" class="saveBtn"><img src="assets/blue-pin.png" alt="pin" height="32px" width="32px"></button>
+          <button type="button" class="saveBtn"><img src="./assets/images/blue-pin.png" alt="pin" height="32px" width="32px"></button>
         </div>
       </div>
 
@@ -43,7 +43,7 @@
         <div class="row">
           <div class="hour">10:00am</div>
           <textarea type="text" class="description col-10" name="10"></textarea>
-          <button type="button" class="saveBtn"><img src="assets/blue-pin.png" alt="pin" height="32px" width="32px"></button>
+          <button type="button" class="saveBtn"><img src="./assets/images/blue-pin.png" alt="pin" height="32px" width="32px"></button>
         </div>
       </div>
 
@@ -51,7 +51,7 @@
         <div class="row">
           <div class="hour">11:00am</div>
           <textarea type="text" class="description col-10" name="11"></textarea>
-          <button type="button" class="saveBtn"><img src="assets/blue-pin.png" alt="pin" height="32px" width="32px"></button>
+          <button type="button" class="saveBtn"><img src="./assets/images/blue-pin.png" alt="pin" height="32px" width="32px"></button>
         </div>
       </div>
 
@@ -59,7 +59,7 @@
         <div class="row">
           <div class="hour">12:00pm</div>
           <textarea type="text" class="description col-10" name="12"></textarea>
-          <button type="button" class="saveBtn"><img src="assets/blue-pin.png" alt="pin" height="32px" width="32px"></button>
+          <button type="button" class="saveBtn"><img src="./assets/images/blue-pin.png" alt="pin" height="32px" width="32px"></button>
         </div>
       </div>
 
@@ -67,7 +67,7 @@
         <div class="row">
           <div class="hour">  1:00pm</div>
           <textarea type="text" class="description col-10" name="13"></textarea>
-          <button type="button" class="saveBtn"><img src="assets/blue-pin.png" alt="pin" height="32px" width="32px"></button>
+          <button type="button" class="saveBtn"><img src="./assets/images/blue-pin.png" alt="pin" height="32px" width="32px"></button>
         </div>
       </div>
 
@@ -75,7 +75,7 @@
         <div class="row">
           <div class="hour">  2:00pm</div>
           <textarea type="text" class="description col-10" name="14"></textarea>
-          <button type="button" class="saveBtn"><img src="assets/blue-pin.png" alt="pin" height="32px" width="32px"></button>
+          <button type="button" class="saveBtn"><img src="./assets/images/blue-pin.png" alt="pin" height="32px" width="32px"></button>
         </div>
       </div>
 
@@ -83,7 +83,7 @@
         <div class="row">
           <div class="hour">  3:00pm</div>
           <textarea type="text" class="description col-10" name="15"></textarea>
-          <button type="button" class="saveBtn"><img src="assets/blue-pin.png" alt="pin" height="32px" width="32px"></button>
+          <button type="button" class="saveBtn"><img src="./assets/images/blue-pin.png" alt="pin" height="32px" width="32px"></button>
         </div>
       </div>
 
@@ -91,7 +91,7 @@
         <div class="row">
           <div class="hour">  4:00pm</div>
           <textarea type="text" class="description col-10" name="16"></textarea>
-          <button type="button" class="saveBtn"><img src="assets/blue-pin.png" alt="pin" height="32px" width="32px"></button>
+          <button type="button" class="saveBtn"><img src="./assets/images/blue-pin.png" alt="pin" height="32px" width="32px"></button>
         </div>
       </div>
 
@@ -99,7 +99,7 @@
         <div class="row">
           <div class="hour">  5:00pm</div>
           <textarea type="text" class="description col-10" name="17"></textarea>
-          <button type="button" class="saveBtn"><img src="assets/blue-pin.png" alt="pin" height="32px" width="32px"></button>
+          <button type="button" class="saveBtn"><img src="./assets/images/blue-pin.png" alt="pin" height="32px" width="32px"></button>
         </div>
       </div>
     </div>
